--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(to bottom right, white, lightcyan);
+    background-image: linear-gradient(to bottom right, white, #e0ffff);
     color: midnightblue;
     font-size: 16px;
 }
@@ -38,3 +38,9 @@ h2 {
 .image-gallery > img {
     padding: 10px;
 }
+
+.image-gallery > img:hover {
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.5); 
+  }
